--- a/configure.in.in
+++ b/configure.in.in
@@ -12,8 +12,8 @@ dnl ***************************
 m4_define([libexo_verinfo], [5:0:5])
 m4_define([libexo_version_major], [0])
 m4_define([libexo_version_minor], [3])
-m4_define([libexo_version_micro], [99])
-m4_define([libexo_version_nano], [2])
+m4_define([libexo_version_micro], [100])
+m4_define([libexo_version_nano], [])
 m4_define([libexo_version_build], [r@REVISION@])
 m4_define([libexo_version_tag], [])
 m4_define([libexo_version], [libexo_version_major().libexo_version_minor().libexo_version_micro()ifelse(libexo_version_nano(), [], [], [.libexo_version_nano()])ifelse(libexo_version_tag(), [svn], [libexo_version_tag()-libexo_version_build()], [libexo_version_tag()])])
