Add it docs to configure. Patch by Maximilian.
(Old svn revision: 29664)

--- a/configure.in.in
+++ b/configure.in.in
@@ -391,6 +391,9 @@ docs/manual/fr/images/Makefile
 docs/manual/id/Makefile
 docs/manual/id/exo-preferred-applications.xml
 docs/manual/id/images/Makefile
+docs/manual/it/Makefile
+docs/manual/it/exo-preferred-applications.xml
+docs/manual/it/images/Makefile
 docs/manual/ja/Makefile
 docs/manual/ja/exo-preferred-applications.xml
 docs/manual/ja/images/Makefile
