--- a/docs/manual/id/exo-preferred-applications.xml.in
+++ b/docs/manual/id/exo-preferred-applications.xml.in
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!DOCTYPE article PUBLIC "-//OASIS//DTD DocBook XML V4.1.2//EN" "http://www.oasis-open.org/docbook/xml/4.1.2/docbookx.dtd" [
 <!ENTITY date "April 2006">
-<!ENTITY version "0.3.92">
+<!ENTITY version "@PACKAGE_VERSION@">
 ]>
 <article id="exo-preferred-applications" lang="id">
 
@@ -33,10 +33,7 @@
       </author>
     </authorgroup>
 
-    <releaseinfo>
-      This manual describes version 0.3.92 of the <emphasis>Xfce Preferred
-      Applications</emphasis> framework and its components.
-    </releaseinfo>
+    <releaseinfo>Manual ini menjelaskan versi @PACKAGE_VERSION@ dari kerangka kerja <emphasis>Aplikasi Kesukaan Xfce</emphasis> dan komponennya.</releaseinfo>
   </articleinfo>
 
 
