* configure.in.in, docs/manual/da/images/, docs/manual/gl/images/: Fix 	  broken build due to incomplete integration of the Danish and Galician 	  manual translations. 	* exo-helper/exo-helper-launcher-dialog.c: Add gettext() call around 	  two strings which are already as translatable with N_() (bug #5203). 	* libexo-0.3.pot, *.po: Update translation files (no real changes 	  though).
(Old svn revision: 29730)

--- a/configure.in.in
+++ b/configure.in.in
@@ -382,12 +382,18 @@ docs/manual/Makefile
 docs/manual/C/Makefile
 docs/manual/C/exo-preferred-applications.xml
 docs/manual/C/images/Makefile
+docs/manual/da/Makefile
+docs/manual/da/exo-preferred-applications.xml
+docs/manual/da/images/Makefile
 docs/manual/es/Makefile
 docs/manual/es/exo-preferred-applications.xml
 docs/manual/es/images/Makefile
 docs/manual/fr/Makefile
 docs/manual/fr/exo-preferred-applications.xml
 docs/manual/fr/images/Makefile
+docs/manual/gl/Makefile
+docs/manual/gl/exo-preferred-applications.xml
+docs/manual/gl/images/Makefile
 docs/manual/id/Makefile
 docs/manual/id/exo-preferred-applications.xml
 docs/manual/id/images/Makefile
