forgot libexo in this job that is getting me very tired
(Old svn revision: 29863)

--- a/docs/manual/gl/exo-preferred-applications.xml.in
+++ b/docs/manual/gl/exo-preferred-applications.xml.in
@@ -74,7 +74,7 @@
     </para>
 
     <sect2 id="configuration-internet">
-      <title>Internet applications</title>
+      <title>Aplicacións de Internet</title>
 
       <para>
         The first page of the configuration dialog allows you to select
@@ -85,14 +85,14 @@
       </para>
 
       <figure id="configuration-internet-figure">
-        <title>Internet applications</title>
+        <title>Aplicacións de Internet</title>
         <screenshot>
           <mediaobject>
             <imageobject>
               <imagedata fileref="images/exo-preferred-applications-internet.png" format="PNG"/>
             </imageobject>
             <textobject>
-              <phrase>Select internet applications</phrase>
+              <phrase>Seleccionar aplicacións de Internet</phrase>
             </textobject>
           </mediaobject>
         </screenshot>
@@ -155,7 +155,7 @@
     </sect2>
 
     <sect2 id="configuration-utilities">
-      <title>Other applications</title>
+      <title>Outras aplicacións</title>
 
       <para>
         The first page of the configuration dialog allows you to select
@@ -166,7 +166,7 @@
       </para>
 
       <figure id="configuration-utilities-figure">
-        <title>Other applications</title>
+        <title>Outras aplicacións</title>
         <screenshot>
           <mediaobject>
             <imageobject>
