--- a/configure.in.in
+++ b/configure.in.in
@@ -9,7 +9,7 @@ dnl
 dnl ***************************
 dnl *** Version information ***
 dnl ***************************
-m4_define([libexo_verinfo], [5:0:5])
+m4_define([libexo_verinfo], [5:0:5]) dnl Needs to be set to [6:0:6] before the next release!
 m4_define([libexo_version_major], [0])
 m4_define([libexo_version_minor], [3])
 m4_define([libexo_version_micro], [101])
